--- a/DiageoMDMWeb/src/main/webapp/admin/canal/consultarCanal.xhtml
+++ b/DiageoMDMWeb/src/main/webapp/admin/canal/consultarCanal.xhtml
@@ -14,7 +14,7 @@
                     <div style="left: 50%;-webkit-transform: translate(-50%);position: absolute;width: 100%">
                         <p:dataTable id="dtChannel" value="#{consultarChannelBean.listaChannels}" var="cha" paginatorAlwaysVisible="false" rows="15"
                                      paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
-                                     rendered="#{consultarChannelBean.verDetalle}"
+                                     rendered="#{consultarChannelBean.verDetalle}" paginator="true"
                                      style="width: 60%;left: 50%;-webkit-transform: translate(-50%);position: absolute;">
                             <p:column headerText="#{msg.can_nombre}">
                                 <h:outputLabel value="#{cha.nombre}"/>
