--- a/DiageoMDMWeb/src/main/webapp/admin/battleground/crearBattleground.xhtml
+++ b/DiageoMDMWeb/src/main/webapp/admin/battleground/crearBattleground.xhtml
@@ -1,14 +1,34 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:p="http://primefaces.org/ui">
 
     <body>
 
         <ui:composition template="./../../WEB-INF/templates/diageoWebTemplate.xhtml">
 
             <ui:define name="content">
-                content
+                <h:form id="formCanal">
+                    <div style="left: 50%;-webkit-transform: translate(-50%);position: absolute;width: 100%">
+                        <h:panelGroup id="pgChaDetalle" style="width: 40%;left: 50%;-webkit-transform: translate(-50%);position: absolute">
+                            <h:panelGrid columns="2" style="width: 100%">
+                                <h:outputLabel value="#{msg.can_nombre}" style="width: 30%"/>
+                                <p:inputText id="itNombre" value="#{battlegroundCreateBean.nameBattle}" required="true" label="#{msg.m_battleground}" style="width: 70%"/>
+                                <h:outputLabel value="#{msg.estado}"/>
+                                <p:selectBooleanCheckbox label="#{msg.usu_activo}" value="#{battlegroundCreateBean.state}"/>
+                            </h:panelGrid> 
+                            <br/>
+                            <br/>
+                            <p:commandButton value="#{msg.btn_send}" process="@all" update="@form" 
+                                             actionListener="#{battlegroundCreateBean.create()}"
+                                             styleClass="button" style="width: 40%;left: 50%;-webkit-transform: translate(-50%)"/>
+                            <br/>
+                            <p:messages id="msg" closable="true" showDetail="true" showSummary="false" globalOnly="false"/>
+                        </h:panelGroup>
+                    </div>
+                </h:form>
             </ui:define>
 
         </ui:composition>
