--- a/DiageoMDMWeb/src/main/webapp/admin/segmento/consultarSegmento.xhtml
+++ b/DiageoMDMWeb/src/main/webapp/admin/segmento/consultarSegmento.xhtml
@@ -15,7 +15,7 @@
                     <div style="left: 50%;-webkit-transform: translate(-50%);position: absolute;width: 100%">
                         <p:dataTable id="dtChannel" value="#{segementoConsultarBean.listaSegmento}" var="seg" paginatorAlwaysVisible="false" rows="15"
                                      paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
-                                     rendered="#{segementoConsultarBean.verDetalle}"
+                                     rendered="#{segementoConsultarBean.verDetalle}" paginator="true"
                                      style="width: 60%;left: 50%;-webkit-transform: translate(-50%);position: absolute;">
                             <p:column headerText="#{msg.seg_nombre}">
                                 <h:outputLabel value="#{seg.nombre}"/>
