--- a/DiageoMDMWeb/src/main/webapp/admin/subcanal/consultarSubCanal.xhtml
+++ b/DiageoMDMWeb/src/main/webapp/admin/subcanal/consultarSubCanal.xhtml
@@ -15,7 +15,7 @@
                     <div style="left: 50%;-webkit-transform: translate(-50%);position: absolute;width: 100%">
                         <p:dataTable id="dtChannel" value="#{consultarSubChannel.listaSubChannel}" var="subcha" paginatorAlwaysVisible="false" rows="15"
                                      paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
-                                     rendered="#{consultarSubChannel.verDetalle}"
+                                     rendered="#{consultarSubChannel.verDetalle}" paginator="true"
                                      style="width: 60%;left: 50%;-webkit-transform: translate(-50%);position: absolute;">
                             <p:column headerText="#{msg.sub_can_nombre}">
                                 <h:outputLabel value="#{subcha.nombre}"/>
